--- a/index.html
+++ b/index.html
@@ -24,34 +24,34 @@
     <!-- Header -->
 
     <header class="header">
-        <!-- <section class="section-titulo-header">
-            <h1>Andrés Campos</h1>
-        </section> -->
+        <section class="section-titulo-header">
+            <h1>ANDRES.DEV</h1>
+        </section>
 
         <nav class="navbar">
             <div class="div-sobre-mi" id="id-sm">
                 <a href=""><i class="bi bi-person"></i></a>
-                <a href="">Sobre Mi</a>
+                <a href="#section-about-p" data-target="section-about-p">Sobre Mi</a>
             </div>
 
-            <div class="div-tech">
+            <div class="div-tech" id="id-tech">
                 <a href=""><i class="bi bi-code"></i></a>
-                <a href="">Tecnologia</a>
+                <a href="" data-target="title-tech">Tecnologia</a>
             </div>
 
-            <div class="div-hb">
+            <div class="div-hb" id="id-hb">
                 <a href=""><i class="bi bi-pencil"></i></a>
-                <a href="">Habilidades</a>
+                <a href="#title-hb" data-target="title-hb">Habilidades</a>
             </div>
 
-            <div class="div-exp">
+            <div class="div-exp" id="id-exp">
                 <a href=""><i class="bi bi-buildings"></i></a>
-                <a href="">Experiencia</a>
+                <a href="#title-exp" data-target="title-exp">Experiencia</a>
             </div>
 
-            <div class="div-contact">
+            <div class="div-contact" id="id-ct">
                 <a href=""><i class="bi bi-chat-left-text"></i></a>
-                <a href="">Contacto</a>
+                <a href="#section-conta" data-target="section-conta">Contacto</a>
             </div>
 
             <div class="div-icon">
@@ -74,7 +74,7 @@
 
         <!-- Principio -->
 
-        <section class="section-about-p">
+        <section class="section-about-p" id="section-about-p">
             <section class="section-about-pa">
                 <h1 class="h1-2">Andrés Campos</h1>
                 <p>¡Hola soy Andrés Campos! Soy una persona con diversos gustos, como son los computadores, la programación y el diseño. También tengo gusto por la música y el arte, además de conocimientos en diversas áreas de la tecnología de computadoras y en áreas de diseño.</p>
@@ -92,11 +92,11 @@
             </section>
         </section>
 
-        <section class="space-about">
+        <section class="space-about" >
         </section>
 
         <!-- Cualidades -->
-        <section class="section-divs">
+        <section class="section-divs" id="section-divs">
 
             <div class="div-front">
                 <div class="div-p">
@@ -164,16 +164,16 @@
             </div>
         </section>
 
-        <section class="space-about">
+        <section class="space-about-tech">
         </section>
 
         <!-- Tecnologias -->
 
-        <section class="title">
-            <h2>Tecnologías</h2>
+        <section class="title-tech" id="title-tech">
+            <h2 class="h2">Tecnologías</h2>
         </section>
 
-        <section class="tech">
+        <section class="tech" id="tech">
             
             <section class="section-tech">
                 <div>
@@ -322,16 +322,16 @@
 
         </section>
 
-        <section class="space-about">
+        <section class="space-about-hb">
         </section>
 
         <!-- Habilidades -->
 
-        <section class="title">
-            <h2>habiliades</h2>
+        <section class="title-hb" id="title-hb">
+            <h2 class="h2">habiliades</h2>
         </section>
 
-        <section class="section-hb">
+        <section class="section-hb" id="section-hb">
             <section class="section-hb-1">
                 <div class="div-ps">
                     <img src="src/adobe-ps-svgrepo-com.svg" alt="" class="ps">
@@ -367,15 +367,15 @@
             </section>
         </section>
 
-        <section class="space-about">
+        <section class="space-about-exp">
         </section>
 
         <!-- Experiencia -->
-        <section class="title">
-            <h2>experiencia</h2>
+        <section class="title-exp" id="title-exp">
+            <h2 class="h2">experiencia</h2>
         </section>
 
-        <section class="section-exp">
+        <section class="section-exp" id="section-exp">
             <section class="vang">
                 <div class="titulo-vang">
                     <img src="src/images-removebg-preview.png" alt="">
@@ -393,8 +393,8 @@
                 </div>
 
                 <div class="links-vang">
-                    <a href="">Vanguardia.com</a>
-                    <a href="">Certificado Obtenido</a>
+                    <a href="" class="van-com">Vanguardia.com</a>
+                    <a href="" class="cert-com">Certificado Obtenido</a>
                 </div>
             </section>
 
@@ -433,7 +433,10 @@
 
         <!-- Contacto -->
 
-        <section class="section-conta">
+        <section class="space-about-ct">
+        </section>
+
+        <section class="section-conta" id="section-conta">
             <section class="titulo-conta">
                 <h1 class="h1">Andrés Campos</h1>
                 <p>¡Gracias por visitar mi portafolio web! Si estás interesado en trabajar juntos, colaborar en un proyecto o simplemente</p>
@@ -442,23 +445,23 @@
 
             <section class="icons-conta">
                 <div class="div-lk">
-                    <a href=""><i class="bi bi-linkedin lk-ct"></i></a>
+                    <a href="www.linkedin.com/in/andresdevback22" target="_blank"><i class="bi bi-linkedin lk-ct"></i></a>
                 </div>
 
                 <div class="div-wt">
-                    <a href=""><i class="bi bi-whatsapp"></i></a>
+                    <a href="https://wa.link/i2pe0t" target="_blank"><i class="bi bi-whatsapp"></i></a>
                 </div>
 
                 <div class="div-tg">
-                    <a href=""><i class="bi bi-telegram"></i></a>
+                    <a href="https://t.me/AndresDevBack" target="_blank"><i class="bi bi-telegram"></i></a>
                 </div>
 
                 <div class="div-g">
-                    <a href=""><i class="bi bi-google"></i></a>
+                    <a href="" class="gmail" onclick="gmail"><i class="bi bi-google"></i></a>
                 </div>
 
                 <div class="div-in">
-                    <a href=""><i class="bi bi-instagram in-ct"></i></a>
+                    <a href="https://www.instagram.com/andres.devback/" target="_blank"><i class="bi bi-instagram in-ct"></i></a>
                 </div>
 
                 <div class="div-td">
@@ -466,7 +469,7 @@
                 </div>
 
                 <div class="div-gh">
-                    <a href=""><i class="bi bi-github"></i></a>
+                    <a href="https://github.com/AndresDvst21" target="_blank"><i class="bi bi-github"></i></a>
                 </div>
             </section>
 
