--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <header class="header">
         <section class="section-titulo-header">
-            <h1>ANDRES.DEV</h1>
+            <h1>ANDRÉS.DEV</h1>
         </section>
 
         <nav class="navbar">
