--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styleexp.css">
     <link rel="stylesheet" href="stylecon.css">
     <link rel="stylesheet" href="styleanimation.css">
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
@@ -30,35 +31,28 @@
 
         <nav class="navbar">
             <div class="div-sobre-mi" id="id-sm">
-                <a href=""><i class="bi bi-person"></i></a>
+                <a href="#section-about-p" data-target="section-about-p"><i class="bi bi-person"></i></a>
                 <a href="#section-about-p" data-target="section-about-p">Sobre Mi</a>
             </div>
 
             <div class="div-tech" id="id-tech">
-                <a href=""><i class="bi bi-code"></i></a>
+                <a href="" data-target="title-tech"><i class="bi bi-code"></i></a>
                 <a href="" data-target="title-tech">Tecnologia</a>
             </div>
 
             <div class="div-hb" id="id-hb">
-                <a href=""><i class="bi bi-pencil"></i></a>
+                <a href="" data-target="title-hb"><i class="bi bi-pencil"></i></a>
                 <a href="#title-hb" data-target="title-hb">Habilidades</a>
             </div>
 
             <div class="div-exp" id="id-exp">
-                <a href=""><i class="bi bi-buildings"></i></a>
+                <a href="" data-target="title-exp"><i class="bi bi-buildings"></i></a>
                 <a href="#title-exp" data-target="title-exp">Experiencia</a>
             </div>
 
             <div class="div-contact" id="id-ct">
-                <a href=""><i class="bi bi-chat-left-text"></i></a>
+                <a href="" data-target="section-conta"><i class="bi bi-chat-left-text"></i></a>
                 <a href="#section-conta" data-target="section-conta">Contacto</a>
-            </div>
-
-            <div class="div-icon">
-                <a href=""><i class="bi bi-linkedin"></i></a>
-                <a href=""><i class="bi bi-instagram"></i></a>
-                <a href=""><i class="bi bi-facebook"></i></a>
-                <a href=""><i class="bi bi-threads"></i></a>
             </div>
         </nav>
     </header>
@@ -445,7 +439,7 @@
 
             <section class="icons-conta">
                 <div class="div-lk">
-                    <a href="www.linkedin.com/in/andresdevback22" target="_blank"><i class="bi bi-linkedin lk-ct"></i></a>
+                    <a href="https://www.linkedin.com/in/andresdevback22" target="_blank"><i class="bi bi-linkedin lk-ct"></i></a>
                 </div>
 
                 <div class="div-wt">
@@ -457,15 +451,15 @@
                 </div>
 
                 <div class="div-g">
-                    <a href="" class="gmail" onclick="gmail"><i class="bi bi-google"></i></a>
+                    <a href="" class="gmail" id="gmail"><i class="bi bi-google"></i></a>
                 </div>
 
                 <div class="div-in">
-                    <a href="https://www.instagram.com/andres.devback/" target="_blank"><i class="bi bi-instagram in-ct"></i></a>
+                    <a href="https://www.instagram.com/andres.devback" target="_blank"><i class="bi bi-instagram in-ct"></i></a>
                 </div>
 
                 <div class="div-td">
-                    <a href=""><i class="bi bi-threads td-ct"></i></a>
+                    <a href="https://www.threads.net/@andres.devback" target="_blank"><i class="bi bi-threads td-ct"></i></a>
                 </div>
 
                 <div class="div-gh">
@@ -480,7 +474,7 @@
 
             <section class="section-code">
                 <p>Código del Portafolio:</p>
-                <a href=""><i class="bi bi-github"></i></a>
+                <a href="https://github.com/AndresDvst21/PortafolioOctubre.git" target="_blank"><i class="bi bi-github"></i></a>
             </section>
         </section>
 
