--- a/index.html
+++ b/index.html
@@ -387,8 +387,8 @@
                 </div>
 
                 <div class="links-vang">
-                    <a href="" class="van-com">Vanguardia.com</a>
-                    <a href="" class="cert-com">Certificado Obtenido</a>
+                    <a href="https://www.vanguardia.com/" target="_blank" class="van-com">Vanguardia.com</a>
+                    <a href="https://drive.google.com/file/d/16ESP7li9G4-FzK1pnntCW7vzlUfA3Iyz/view?usp=drive_link" target="_blank" class="cert-com">Certificado Obtenido</a>
                 </div>
             </section>
 
